Temporarily disable GestureFlingStart input DCHECK.

This DCHECK causes the browser process to crash and makes debuggining on
a debug build (dchecks on) really tedious on ChromeOS.

This CL temporarily disables the DCHECK while we work on a real fix.

BUG=695187

Review-Url: https://codereview.chromium.org/2737943002
Cr-Commit-Position: refs/heads/master@{#455564}

Former-commit-id: 74937dc645b191514bde662169aee3b29074b39d